2010-08-09  Nathan Froyd  <froydnj@codesourcery.com>

	* builtins.c (fold_builtin_next_arg): Use stdarg_p.
	* config/arm/arm.c (arm_get_pcs_model): Likewise.
	* config/avr/avr.c (init_cumulative_args): Likewise.
	* config/iq2000/iq2000.c (iq2000_expand_prologue): Likewise.
	* config/lm32/lm32.c (lm32_setup_incoming_varargs): Likewise.
	* config/m68k/m68k.c (m68k_return_pops_args): Likewise.
	* config/mn10300/mn10300.c (mn10300_builtin_saveregs): Likewise.
	* config/pa/pa.c (hppa_builtin_saveregs): Likewise.
	* config/pa/som.h (ASM_DECLARE_FUNCTION_NAME): Likewise.
	* config/rs6000/rs6000.c (init_cumulative_args): Likewise.
	* dwarf2out.c (gen_subprogram_die): Likewise.
	* function.c (allocate_struct_function): Likewise.
	* c-aux-info.c (gen_formal_list_for_func_dec): Likewise.
	(deserves_ellipsis): Delete.

2010-08-09  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-copy.c (cached_last_copy_of): Remove.
	(valueize_val): New function.
	(get_last_copy_of): Remove.
	(set_copy_of_val): Simplify.
	(dump_copy_of): Likewise.
	(copy_prop_visit_cond_stmt): Use valueize_val.
	(copy_prop_visit_phi_node): Properly handle unvisited names.
	Drop code managing copy-of chains.
	(init_copy_prop): Adjust.
	(fini_copy_prop): Likewise.
	(execute_copy_prop): Remove obsolete comment.

2010-08-09  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44632
	* function.c (gimplify_parameters): Do not clear addressable
	bit of the original parameter.

2010-08-09  Richard Guenther  <rguenther@suse.de>

	PR middle-end/45212
	* emit-rtl.c (set_mem_attributes_minus_bitpos): Adjust
	alignment from MEM_REF offset only if we took it from the
	base object.

2010-08-09  Eric Fisher <joefoxreal@gmail.com>

	* doc/sourcebuild.texi (vect_int_mult): Remove duplicate entry.

2010-08-08  Nathan Froyd  <froydnj@codesourcery.com>

	* c-tree.h (build_arg_info): Declare.
	* c-decl.c (build_arg_info): Define.
	(get_parm_info): Call it.  Delete initialization code.